# aech-rt-inbox-assistant

./: .env.example  .gitignore  CAPABILITY_SPEC.md  CLI_MANIFEST_SPEC_v5.md  DELEGATE_ACCESS_SETUP.md  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  docker-compose.tools.yml  docker-compose.yml  generate_manifest.py  manifest.json  pyproject.toml  requirements.txt  verify_changes.py
.ref-proj/: .gitignore  README.md  manifest.json  pyproject.toml  requirements.txt
.ref-proj/aech_cli_translator/: __init__.py  main.py
aech_cli_inbox/: main.py  manifest.json  state.py
cli/: manifest.json  pyproject.toml
cli/aech_cli_inbox/: main.py  manifest.json  state.py
docs/: categories-setup.md  msgraph-cli-feature-request.md
queries/: emails_by_category.sql  newsletters_last_week.sql  recent_triage_decisions.sql  unprocessed_emails.sql  urgent_emails_last_24h.sql
scripts/: backfill.sh  consolidate_schema.py  debug_attachment.py  fresh_start.sh  full_pipeline.py  mark_processed.py  mgmt.py  migrate_to_assistant_db.py  migrate_wm_threads_status.py  run-backfill.sh  test_pipeline.py  wm_backfill.py
src/: __init__.py  action_executor.py  alerts.py  attachments.py  body_parser.py  calendar.py  calendar_intelligence.py  calendar_sync.py  categories_config.py  chunker.py  database.py  embeddings.py  facts.py  folders_config.py  main.py  meeting_prep.py  model_utils.py  organizer.py  poller.py  preferences.py  search.py  triggers.py
src/working_memory/: __init__.py  engine.py  models.py  updater.py
tests/: rt_interface_test.py  test_flow.py
