[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aech-cli-inbox"
version = "0.2.0"
description = "Inbox Assistant CLI for Agent Aech"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.scripts]
aech-cli-inbox = "aech_cli_inbox.main:run"

[tool.setuptools.packages.find]
include = ["aech_cli_inbox"]

[tool.setuptools.package-data]
aech_cli_inbox = ["manifest.json"]
