[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aech-rt-inbox-assistant"
version = "0.1.1"
description = "Real-time Inbox Assistant for Agent Aech"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "requests",
    "pydantic",
    "pydantic-ai",
    "openai",
    "msal",
    "markitdown[all]",
    "markdownify",
    "sentence-transformers",
    "aech-cli-msgraph",
    "aech-cli-documents",
    "aech-llm-observability",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]
