[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aech-cli-translator"
version = "0.1.1"
description = "Document translation CLI for Agent Aech"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "pydantic-ai",
]

[project.scripts]
aech-cli-translator = "aech_cli_translator.main:run"

[tool.setuptools.package-data]
aech_cli_translator = ["manifest.json"]
