[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aech-cli-inbox"
version = "0.2.0"
description = "Inbox Assistant CLI for Agent Aech"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.scripts]
aech-cli-inbox = "aech_cli_inbox.main:run"

[tool.setuptools.package-data]
aech_cli_inbox = ["manifest.json"]
